// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cellSetsReducer Adds cells to scratchpad on creation 1`] = `
[
  {
    "children": [
      {
        "key": "key2",
      },
    ],
    "key": "scratchpad",
  },
]
`;

exports[`cellSetsReducer Adds cells to scratchpad on creation 2`] = `
{
  "key2": {
    "cellIds": Set {
      1,
      2,
      3,
    },
    "color": "#ff00ff",
    "key": "key2",
    "name": "My Key",
    "parentNodeKey": "scratchpad",
    "type": "cellSets",
  },
}
`;

exports[`cellSetsReducer Adds hidden cell sets to set 1`] = `
Set {
  "new",
}
`;

exports[`cellSetsReducer Handles rehiding of previously hidden cell sets 1`] = `
Set {
  "a",
}
`;

exports[`cellSetsReducer Handles unhiding of a not hidden cell set 1`] = `
Set {
  "a",
}
`;

exports[`cellSetsReducer Handles unhiding of previously hidden cell sets 1`] = `Set {}`;

exports[`cellSetsReducer Removes child correctly 1`] = `
[
  {
    "children": [],
    "key": "1",
  },
  {
    "children": [],
    "key": "2",
  },
]
`;

exports[`cellSetsReducer Selected cells are maintained 1`] = `
[
  "a",
  "b",
  "c",
]
`;

exports[`cellSetsReducer Selected cells are maintained 2`] = `
[
  1,
  2,
  "c",
  3,
]
`;

exports[`cellSetsReducer Sets up store properly for loaded cell sets. 1`] = `
{
  "1": {
    "cellIds": Set {},
    "color": undefined,
    "name": "parent 1",
    "rootNode": true,
    "type": undefined,
  },
  "1a": {
    "cellIds": Set {},
    "color": "#00FF00",
    "name": "first child",
    "parentNodeKey": "1",
    "rootNode": undefined,
    "type": undefined,
  },
  "2": {
    "cellIds": Set {},
    "color": undefined,
    "name": "parent 2",
    "rootNode": true,
    "type": undefined,
  },
}
`;

exports[`cellSetsReducer Updates cell set properties 1`] = `
{
  "cellIds": undefined,
  "color": "#ffffff",
  "name": "favorite child",
  "rootNode": undefined,
}
`;

exports[`cellSetsReducer reorders correctly 1`] = `
{
  "error": false,
  "hidden": Set {},
  "hierarchy": [
    {
      "children": [
        {
          "key": "1b",
        },
        {
          "key": "1a",
        },
      ],
      "key": "1",
    },
    {
      "children": [],
      "key": "2",
    },
  ],
  "initialLoadPending": true,
  "loading": false,
  "properties": {
    "1": {
      "cellIds": undefined,
      "color": undefined,
      "name": "parent 1",
      "rootNode": true,
    },
    "1a": {
      "cellIds": [],
      "color": "#00FF00",
      "name": "first child",
      "rootNode": false,
    },
    "1b": {
      "cellIds": [],
      "color": "#00FFFF",
      "name": "second child",
      "rootNode": false,
    },
    "2": {
      "cellIds": undefined,
      "color": undefined,
      "name": "parent 2",
      "rootNode": true,
    },
  },
  "selected": [],
  "updatingClustering": false,
}
`;
